<resources>
    <string name="app_name">Call Prefix Filter</string>
    <string name="action_add_butt">Add button</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_operation">Operation</string>
    <string name="action_call_log">Call Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_sort_order_nil">No sorting</string>
    <string name="action_sort_order_pfx">Sort by prefix</string>
    <string name="action_sort_order_cc_pfx">Sort by CC prefix</string>
    <string name="action_sort_order_time">Sort by time</string>
    <string name="action_sort_order_num">Sort by number</string>
    <string name="action_op_export_csv">Export CSV</string>
    <string name="action_op_import_csv">Import CSV</string>
    <string name="action_op_clear_rules">Clear rules</string>
    <string name="noti_file_name">com.gmail.leewkb1307.callprefixfilter.notifications.counters</string>
    <string name="noti_file_key_id">com.gmail.leewkb1307.callprefixfilter.notifications.counters.id</string>
    <string name="noti_file_key_pfx">com.gmail.leewkb1307.callprefixfilter.notifications.counters.pfx</string>
    <string name="noti_file_key_num">com.gmail.leewkb1307.callprefixfilter.notifications.counters.num</string>
    <string name="option_file_name">com.gmail.leewkb1307.callprefixfilter.options.sort</string>
    <string name="option_file_key_type">com.gmail.leewkb1307.callprefixfilter.options.sort.type</string>
    <string name="ccode_type_1">Always</string>
    <string name="ccode_type_2">When phone number starts with +</string>
    <string name="noti_type_0">Disable</string>
    <string name="noti_type_1">Show blocked calls</string>
    <string name="noti_type_2">Show all calls</string>
    <string name="text_n_a">N/A</string>
    <string name="mesg_async_busy">Busy… Please try again.</string>
    <string name="mesg_prg_nil">TBD</string>
    <string name="mesg_prg_loading">Loading rules…</string>
    <string name="mesg_prg_exporting">Exporting CSV…</string>
    <string name="mesg_prg_reading">Reading CSV…</string>
    <string name="mesg_prg_checking">Checking CSV…</string>
    <string name="mesg_prg_importing">Importing CSV…</string>
    <string name="mesg_prg_writing">Writing database…</string>
    <string name="mesg_prg_clearing">Clearing rules…</string>
    <string name="diag_text_prefix">Prefix</string>
    <string name="diag_text_exact">Exact number</string>
    <string name="diag_text_ccode">Country Code</string>
    <string name="diag_text_fname">Filename:</string>
    <string name="diag_text_ename">editname</string>
    <string name="diag_text_cpath">.</string>
    <string name="mesg_filter_not_permitted">Call filter cannot function because it is not permitted to monitor phone calls.</string>
    <string name="mesg_call_log_not_permitted">Not permitted to read call log…</string>
</resources>
