<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gmail.leewkb1307.callprefixfilter.CallLogActivity">
    <item
        android:orderInCategory="110"
        android:title="@string/action_sort_order"
        app:showAsAction="never" >
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_time"
                    android:title="@string/action_sort_order_time" />
                <item
                    android:id="@+id/action_sort_num"
                    android:title="@string/action_sort_order_num" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_log"
        android:orderInCategory="200"
        android:title="@string/action_clear_log"
        app:showAsAction="never" />
</menu>